k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-k8sfrontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: test-k8sfrontend
  template:
    metadata:
      labels:
        app: test-k8sfrontend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: test-k8sfrontend
          image: yuvan2op/test-k8sfrontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80          
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
